# Prediction-Market-Maker

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: backtest_market_making.yaml  backtest_signal_taking.yaml  backtest_weather_threshold.yaml  contract_overrides.yaml  dataset_macro_v1.yaml  dataset_weather_v1.yaml  macro_sources.yaml  model_evaluation.yaml  model_weather_baseline.yaml  model_weather_logistic.yaml  model_weather_tree.yaml  universe.yaml  weather_sources.yaml
docs/: backtest_methodology.md  model_card_weather_logistic.md
notebooks/: 05_weather_data_collection.ipynb  06_weather_label_generation.ipynb  07_market_vs_weather_baselines.ipynb  08_macro_data_collection.ipynb  09_dataset_validation.ipynb  10_weather_model_baselines.ipynb  11_weather_fair_value_model.ipynb  12_model_calibration_diagnostics.ipynb  13_market_vs_model_edge_analysis.ipynb  14_model_ablation_study.ipynb  15_backtest_data_replay.ipynb  16_simple_signal_backtest.ipynb  17_execution_simulation.ipynb  18_backtest_pnl_analysis.ipynb
reports/: finance_feature_strategy_recommendations.md  forecast_revision_event_study.md  part_2_weather_contract_parse_failures.md  part_2_weather_exogenous_dataset.md  part_2_weather_nyc_main_validation.md  part_2_weather_nyc_smoke_validation.md  partition_basket_and_monotonicity.md  weather_collector_production_audit.md  weather_dataset_strategy_readiness.md
scripts/: run_live_weather_collector.sh  run_weather_smoke_test.sh
tests/: test_auth.py  test_backtest_core.py  (+26 more)
(+92 files in other folders)
