[project]
name = "eventmm-kalshi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vihaan-Narvekar", email = "narvekarvihaan@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "duckdb>=1.0.0",
    "httpx>=0.28.1",
    "numpy>=1.26.0",
    "orjson>=3.10.0",
    "pandas>=2.0.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.0",
    "rich>=15.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.4.0",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "typer>=0.26.7",
    "websockets>=16.0",
]

[project.scripts]
eventmm = "eventmm.cli:app"
eventmm-kalshi = "eventmm.cli:app"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "eventmm"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]
